--- a/boxplot/index.html
+++ b/boxplot/index.html
@@ -30,6 +30,8 @@
         }
       });
       </script>
+          <link href="../product.css" rel="stylesheet">
+
       <style>
       .gist{font-size:12px;line-height:16px;margin-bottom:0px;width:600px}
       .gist-meta{display:none;}
@@ -47,9 +49,28 @@
           text-decoration: none;
           cursor: pointer;
       }
+      .footer {
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: black;
+          text-align: center;
+      }
       </style>
       </head>
 <body>
+
+    <nav class="site-header sticky-top py-1">
+        <div class="container d-flex flex-column flex-md-row justify-content-between">
+          <a class="py-2" href="../index.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+          </a>
+          <a class="py-2 d-none d-md-inline-block" href="neural_nets/nn.html">Neural Nets</a>
+          <a class="py-2 d-none d-md-inline-block" href="datasets/data.html">Datasets</a>
+          <a class="py-2 d-none d-md-inline-block" href="analysis.html">Analysis</a>
+          
+        </div>
+      </nav>
     <button style="float:left" onclick=location.href="../analysis.html">Voltar </button>
 
     <div class="container" align="center" style="margin-top: 2%">
